Fix sprite cropping on various links/buttons.

--- a/app/assets/stylesheets/base/layouts/_public.css.scss
+++ b/app/assets/stylesheets/base/layouts/_public.css.scss
@@ -236,11 +236,11 @@
 
   .apply-icon {
     display: inline-block;
-    height: 48px;
-    width: 48px;
+    height: 49px;
+    width: 49px;
     vertical-align: middle;
     margin-right: 12px;
-    background: url(image_path('bz_icons.svg')) 0 -1989px;
+    background: url(image_path('bz_icons.svg')) 0 -1988px;
 
     &:hover {
       background: url(image_path('bz_icons.svg')) -58px -1989px;
@@ -261,12 +261,12 @@
 
   .apply-icon {
     display: inline-block;
-    height: 89px;
-    width: 89px;
-    background: url(image_path('bz_icons.svg')) 0 -1890px;
+    height: 90px;
+    width: 90px;
+    background: url(image_path('bz_icons.svg')) 0 -1889px;
 
     &:hover {
-      background: url(image_path('bz_icons.svg')) -99px -1890px;
+      background: url(image_path('bz_icons.svg')) -99px -1889px;
     }
   }
 
@@ -283,11 +283,11 @@
 
   .jump-icon {
     display: inline-block;
-    height: 16px;
-    width: 16px;
+    height: 17px;
+    width: 17px;
     vertical-align: middle;
     margin-right: 6px;
-    background: url(image_path('bz_icons.svg')) -26px -2141px;
+    background: url(image_path('bz_icons.svg')) -26px -2140px;
   }
 
   .jump-text {
@@ -304,11 +304,11 @@
 
   .learn-more-icon {
     display: inline-block;
-    height: 24px;
-    width: 24px;
+    height: 25px;
+    width: 25px;
     vertical-align: middle;
     margin-right: 6px;
-    background: url(image_path('bz_icons.svg')) 0 -2047px;
+    background: url(image_path('bz_icons.svg')) 0 -2046px;
   }
 
   .learn-more-text {
@@ -329,7 +329,7 @@
     width: 25px;
     vertical-align: middle;
     margin-right: 6px;
-    background: url(image_path('bz_icons.svg')) -136px -2047px;
+    background: url(image_path('bz_icons.svg')) -136px -2046px;
   }
 
   .sign-up-text {
